* included security into api getaway * implemented Authorization Filter for api getaway * allow access to registration and login from api getaway * accessing protected microservices with Access Token